# EngineCalc

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Makefile  README.md  coverage.sh
plot/: sandbox.csv  sandbox.tex
plot/engine_momentum_power_by_rpm/: plot.tex  plot.txt
plot/engine_power_by_speed/: plot.tex  plot.txt
src/: Makefile  coverage.sh  main.cc
src/common/: types.h
src/math/: constant.cc  constant.h  custom_function.cc  custom_function.h  differential.cc  differential.h  extremum_calculator.cc  extremum_calculator.h  function.cc  function.h  identity.cc  identity.h  implicit_function.cc  implicit_function.h  integral.cc  integral.h  max_function.cc  max_function.h  min_function.cc  min_function.h
src/math/function/: constant.h  custom_function.cc  custom_function.h  function.cc  function.h  identity.cc  implicit_function.cc  max_function.cc
src/math/function/polynomial/: monomial.h
src/math/polynomial/: lagrange_polynom_builder.cc  lagrange_polynom_builder.h  monomial.cc  monomial.h  polynomial.cc  polynomial.h
src/model/engine/: common_engines.cc  common_engines.h  engine.cc  engine.h  precalculated_momentum_builder.cc  precalculated_momentum_builder.h
src/model/transmission/: common_differentials.cc  common_differentials.h  common_gearboxes.cc  common_gearboxes.h  differential.cc  differential.h  gearbox.cc  gearbox.h  transmission.cc  transmission.h  tyre.cc  tyre.h
src/physics/: common_units.cc  common_units.h  unit_definitions.cc  units.cc  units.h  value.cc  value.h
src/test/: test_runner.cc
src/test/math/: identity_test.cc
src/tools/engine/: engine_power_calculator.cc  engine_power_calculator.h
src/tools/suspension/: suspension_calculator.cc  suspension_calculator.h
src/util/exceptions/: illegal_argument_exception.cc  illegal_argument_exception.h
src/util/files/: file_io.cc  file_io.h
src/util/plot/: data_calculator_2d.cc  data_calculator_2d.h  plot_builder_2d.cc  plot_builder_2d.h  simple_2d_plotter.cc  simple_2d_plotter.h
test/math/: constant_test.cc  custom_function_test.cc  differential_test.cc  extremum_calculator_test.cc  function_test.cc  identity_test.cc  implicit_function_test.cc  integral_test.cc
test/math/function/: constant_test.cc  custom_function_test.cc  function_test.cc  identity_test.cc  implicit_function_test.cc
test/math/function/polynomial/: monomial_test.cc  polynomial_test.cc
test/math/polynomial/: monomial_test.cc  polynomial_test.cc
test/model/engine/: common_engines_test.cc
test/model/transmission/: gearbox_test.cc  transmission_test.cc  tyre_test.cc
test/physics/: units_test.cc  value_test.cc
test/util/plot/: data_calculator_2d_test.cc
